@@ -1,8 +1,8 @@
 Package: BART3
 Type: Package
 Title: Bayesian Additive Regression Trees
-Version: 5.5
-Date: 2024-12-14
+Version: 5.6
+Date: 2025-03-14
 Authors@R: c(person('Robert', 'McCulloch', role='aut'),
   person('Rodney', 'Sparapani', role=c('aut', 'cre'), 
   email='rsparapa@mcw.edu'),
