@@ -3,6 +3,7 @@ useDynLib('BART3', .registration=TRUE)
 export(wbart, mc.wbart, pwbart, mc.wbart.gse, mc.pwbart)
 export(pbart, mc.pbart)
 export(gbart, mc.gbart)
+##export(sbart)
 export(tsvs)
 export(ml.gbart)
 ##export(zbart, mc.zbart, ss.zbart, ss.gbart)
@@ -11,6 +12,7 @@ export(abart, mc.abart)
 ##export(spbart, mc.spbart)
 export(stratrs, rs.pbart)
 export(lbart, mc.lbart)
+##export(cbart) ##(, mc.cbart)
 export(mbart, mc.mbart)
 export(mbart2, mc.mbart2)
 export(surv.pre.bart, surv.bart, surv.pwbart, mc.surv.bart, mc.surv.pwbart)
