@@ -23,7 +23,7 @@ mc.surv.bart <- function(
                          x.train = matrix(0,0,0),
                          y.train=NULL, times=NULL, delta=NULL,
                          x.test = matrix(0,0,0),
-                         K=NULL, events=NULL, ztimes=NULL, zdelta=NULL,
+                         K=NULL, events=NULL, ztimes=NULL, zdelta=NULL, zsum=NULL,
                          sparse=FALSE, theta=0, omega=1,
                          a=0.5, b=1, augment=FALSE, rho=0, grp=NULL,
                          xinfo=matrix(0,0,0), usequants=FALSE,
@@ -74,7 +74,7 @@ mc.surv.bart <- function(
 
     if(length(y.train)==0) {
         pre <- surv.pre.bart(times, delta, x.train, x.test, K=K,
-                             events=events, ztimes=ztimes, zdelta=zdelta)
+                             events=events, ztimes=ztimes, zdelta=zdelta, zsum=zsum)
 
         tx.train <- pre$tx.train
         tx.test  <- pre$tx.test
@@ -135,9 +135,7 @@ mc.surv.bart <- function(
     mc.ndpost <- ceiling(ndpost/mc.cores)
 
     ## mc.ndpost <- ((ndpost %/% mc.cores) %/% keepevery)*keepevery
-
     ## while(mc.ndpost*mc.cores<ndpost) mc.ndpost <- mc.ndpost+keepevery
-
     ## mc.nkeep <- mc.ndpost %/% keepevery
 
     post.list <- list()
@@ -147,7 +145,7 @@ mc.surv.bart <- function(
             parallel::mcparallel({psnice(value=nice);
                 surv.bart(x.train=x.train, y.train=y.train, x.test=x.test,
                           times=times, delta=delta, K=K,
-                          events=events, ztimes=ztimes, zdelta=zdelta,
+                          events=events, ##ztimes=ztimes, zdelta=zdelta, zsum=zsum,
                           sparse=sparse, theta=theta, omega=omega,
                           a=a, b=b, augment=augment, rho=rho, grp=grp,
                           xinfo=xinfo, usequants=usequants,
